Rewrite show-hide Sections

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <span class="line"></span>
               <li><a href="#" id="new">Add New</a></li>
               <span class="line"></span>
-              <li><a href="#contact-section" id="contact">Contact</a></li>
+              <li><a href="#" id="contact">Contact</a></li>
           </ul>
         </nav>
         <p id="date"></p>
