--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 <title>Awesome Books</title>
 </head>
 <body>
@@ -62,6 +62,6 @@
         </div>
     </footer>
     <script type="module" src="./modules/luxon.js"></script>
-    <script type="module" src="./modules/script.js"></script>
+    <script type="module" src="./modules/index.js"></script>
 </body>
 </html>
